[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"
default-run = "play"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = "1.9.1"


[[bin]]
name = "play"
path = "src/play.rs"

[[bin]]
name = "play-async"
path = "src/play_async.rs"
